--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,13 @@
 version: "3"
+
 services:
-  task9:
-    image: 127.0.0.1:5000/task9-app
-    build: .
+  task9-service:
+    image: marinaagafonova/task9:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "8000:5000"
-    volumes:
-      - ./app:/app
-    environment:
-      FLASK_ENV: development
+      - "5000:80"
     deploy:
       mode: replicated
       replicas: 4
